# awpipl2

./: .cproject  Makefile.am  awpipl2.pc.in  configure.ac
borland/: awpipl2b.bpr
doc/: tree.txt
include/: awpipl.h
include/_include/: _awpipl.h  awpio.h
src/: Doxyfile  Makefile.am  _awpio.c  awpBlur.c  awpEdge.c  awpchannels.c  awpcommon.c  awpcontour.c  awpcontrast.c  awpconvert.c  awpcopypaste.c  awpdraw.c  awpframeprocess.c  awpgeometry.c  awpio.c  awpmaskconvolution.c  awpstroke.c  awpthreshold.c
vc/vc2010/: awpipl2.sln  awpipl2.vcxproj  awpipl2.vcxproj.filters
